--- a/ui/src/Styles/_buttons.scss
+++ b/ui/src/Styles/_buttons.scss
@@ -21,10 +21,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 100%;
 	min-width: 7.813rem;
 	height: 2.75rem;
-	margin: 0.5rem auto 0;
 	padding: 0 1.5rem;
 
 	font-family: inherit;
@@ -45,6 +43,8 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.16), 0 2px 4px rgba(0, 0, 0, 0.12),
 
 @mixin button-primary {
 	@include button-defaults;
+	width: 100%;
+	margin: 0.5rem auto 0;
 
 	color: colors.$white;
 
@@ -76,6 +76,8 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.16), 0 2px 4px rgba(0, 0, 0, 0.12),
 
 @mixin button-secondary {
 	@include button-defaults;
+	width: 100%;
+	margin: 0.5rem auto 0;
 
 	color: colors.$dark-turquoise;
 
